画像整理と整形

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <!-- /container -->
 
   <div class="container" id="skill">
-    <div class="row mt centered ">
+    <div class="row mt centered title">
       <div class="col-lg-4 col-lg-offset-4">
         <h3>SKILL</h3>
         <p>-スキル-</p>
@@ -183,7 +183,7 @@
 
   <div id="grey">
     <div class="container" id="works">
-      <div class="row mt centered ">
+      <div class="row mt centered title">
         <div class="col-lg-4 col-lg-offset-4">
           <h3>WORKS</h3>
           <p>-実績-</p>
@@ -291,7 +291,7 @@
 
   <div id="white">
     <div class="container" id="contactus">
-      <div class="row mt">
+      <div class="row mt title">
         <div class="col-lg-4 col-lg-offset-4 centered">
           <h3>Contact Us</h3>
           <p>-お問い合わせ-</p>
@@ -343,7 +343,7 @@
 
   <div id="grey">
     <div class="container" id="sns">
-      <div class="row mt">
+      <div class="row mt title">
         <div class="col-lg-4 col-lg-offset-4 centered">
           <h3>SNS</h3>
           <p>-ソーシャルネットワーク-</p>
