--- a/index.html
+++ b/index.html
@@ -50,148 +50,147 @@
   </div>
   <!-- /headerwrap -->
 
-  <div class="container" id="about">
+  <div id="about">
     <div class="row mt centered ">
       <div class="col-lg-4 col-lg-offset-4">
         <h3>ABOUT</h3>
         <p>-自己紹介-</p>
-        <hr />
       </div>
     </div>
     <!-- /row -->
 
-    <div class="row mt">
-      <div class="col-lg-6 col-md-6 col-xs-12 desc text-right">
-        <img width="350" src="img/me.jpg" alt="me" />
+    <div class="container">
+      <div class="row mt">
+        <div class="col-lg-6 col-md-6 col-xs-12 desc text-right">
+          <img width="350" src="img/me.jpg" alt="me" />
+        </div>
+        <div class="profile col-lg-6 col-md-6 col-xs-12 desc">
+          <table>
+            <tbody>
+              <tr>
+                <th scope="row" class="text-align-center">
+                  <i class="fa fa-user fa-3x" aria-hidden="true"></i>
+                </th>
+                <td>もちごま</td>
+              </tr>
+              <tr>
+                <th scope="row">
+                  <i class="fa fa-birthday-cake fa-3x" aria-hidden="true"></i>
+                </th>
+                <td>
+                  1993/09/01
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">
+                  <i class="fa fa-home fa-3x" aria-hidden="true"></i>
+                </th>
+                <td>
+                  東京都
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <p>
+            高校からプログラミングを学び、
+            <br>
+            大学でも工学部でパソコンと向き合う生活を送る。
+            <br>
+            <br>
+            新卒で就職したWEB系企業を10カ月で退職し、
+            <br>
+            1カ月のニートを経て、組み込み系企業へ転職。
+            <br>
+            3年間の経験を積み、推しユニットの解散をきっかけに
+            <br>
+            現在はフリーランスで活動する。
+            <br>
+            <br>
+            趣味は写真、動画撮影。
+            <br>
+            企業のInstagramの運営や、YouTubeの動画編集も担当している。
+          </p>
+        </div>
       </div>
-      <div class="profile col-lg-6 col-md-6 col-xs-12 desc">
-        <table>
-          <tbody>
-            <tr>
-              <th scope="row" class="text-align-center">
-                <i class="fa fa-user fa-3x" aria-hidden="true"></i>
-              </th>
-              <td>もちごま</td>
-            </tr>
-            <tr>
-              <th scope="row">
-                <i class="fa fa-birthday-cake fa-3x" aria-hidden="true"></i>
-              </th>
-              <td>
-                1993/09/01
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">
-                <i class="fa fa-home fa-3x" aria-hidden="true"></i>
-              </th>
-              <td>
-                東京都
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <p>
-          高校からプログラミングを学び、
-          <br>
-          大学でも工学部でパソコンと向き合う生活を送る。
-          <br>
-          <br>
-          新卒で就職したWEB系企業を10カ月で退職し、
-          <br>
-          1カ月のニートを経て、組み込み系企業へ転職。
-          <br>
-          3年間の経験を積み、推しユニットの解散をきっかけに
-          <br>
-          現在はフリーランスで活動する。
-          <br>
-          <br>
-          趣味は写真、動画撮影。
-          <br>
-          企業のInstagramの運営や、YouTubeの動画編集も担当している。
-        </p>
-      </div>
-    </div>
     <!-- /row -->
+    </div>
   </div>
   <!-- /container -->
 
-  <div class="container" id="skill">
+  <div id="skill">
     <div class="row mt centered title">
       <div class="col-lg-4 col-lg-offset-4">
         <h3>SKILL</h3>
         <p>-スキル-</p>
-        <hr />
       </div>
     </div>
-    <div class="row mt">
-      <div class="col-lg-3 col-md-3 col-xs-12">
-        <div class="text-center">
-          <i class="fa fa-desktop fa-5x" aria-hidden="true"></i>
-          <h4>Web制作</h4>
+    <div class="container">
+      <div class="row mt">
+        <div class="col-lg-3 col-md-3 col-xs-12">
+          <div class="text-center">
+            <i class="fa fa-desktop fa-5x" aria-hidden="true"></i>
+            <h4>Web制作</h4>
+          </div>
+          <p>
+            Wordpressを使用し、レスポンシブ対応サイトを作成します。
+            <br>
+            JavaScriptのスキルもあるので、動的なサイト作りも可能です。
+            <br>
+            納品後も随時修正は受け付け致します
+          </p>
         </div>
-        <p>
-          Wordpressを使用し、レスポンシブ対応サイトを作成します。
-          <br>
-          JavaScriptのスキルもあるので、動的なサイト作りも可能です。
-          <br>
-          納品後も随時修正は受け付け致します
-        </p>
-      </div>
-      <div class="col-lg-3 col-md-3 col-xs-12">
-        <div class="text-center">
-          <i class="fa fa-camera fa-5x" aria-hidden="true"></i>
-          <h4>写真撮影</h4>
+        <div class="col-lg-3 col-md-3 col-xs-12">
+          <div class="text-center">
+            <i class="fa fa-camera fa-5x" aria-hidden="true"></i>
+            <h4>写真撮影</h4>
+          </div>
+          <p>
+            ポートレートから宣材写真まで
+            <br>
+            一眼レフを使用した高画質な撮影をします。
+            <br>
+            色味の修正やシワの除去などの加工も対応致します。
+          </p>
         </div>
-        <p>
-          ポートレートから宣材写真まで
-          <br>
-          一眼レフを使用した高画質な撮影をします。
-          <br>
-          色味の修正やシワの除去などの加工も対応致します。
-        </p>
-      </div>
-      <div class="col-lg-3 col-md-3 col-xs-12">
-        <div class="text-center">
-          <i class="fa fa-video-camera fa-5x" aria-hidden="true"></i>
-          <h4>動画編集</h4>
+        <div class="col-lg-3 col-md-3 col-xs-12">
+          <div class="text-center">
+            <i class="fa fa-video-camera fa-5x" aria-hidden="true"></i>
+            <h4>動画編集</h4>
+          </div>
+          <p>
+            記念動画やYoutuber向け動画の撮影、編集をします。
+            <br>
+            Youtubeへのアップロードも対応致します。
+          </p>
         </div>
-        <p>
-          記念動画やYoutuber向け動画の撮影、編集をします。
-          <br>
-          Youtubeへのアップロードも対応致します。
-        </p>
-      </div>
-      <div class="col-lg-3 col-md-3 col-xs-12">
-        <div class="text-center">
-          <i class="fa fa-lightbulb-o fa-5x" aria-hidden="true"></i>
-          <h4>業務コンサル</h4>
+        <div class="col-lg-3 col-md-3 col-xs-12">
+          <div class="text-center">
+            <i class="fa fa-lightbulb-o fa-5x" aria-hidden="true"></i>
+            <h4>業務コンサル</h4>
+          </div>
+          <p>
+            4年間、客先常駐で得た経験から
+            <br>
+            業務フローをヒアリングし、効率化を提案します。
+            <br>
+            必要に応じて、効率化ツールの作成も致します。
+          </p>
         </div>
-        <p>
-          4年間、客先常駐で得た経験から
-          <br>
-          業務フローをヒアリングし、効率化を提案します。
-          <br>
-          必要に応じて、効率化ツールの作成も致します。
-        </p>
       </div>
     </div>
+    <!-- /container -->
   </div>
 
-  </div>
-  <!-- /container -->
-
-  <div id="grey">
-    <div class="container" id="works">
-      <div class="row mt centered title">
-        <div class="col-lg-4 col-lg-offset-4">
-          <h3>WORKS</h3>
-          <p>-実績-</p>
-          <hr />
-        </div>
-        <!-- /col-lg-4 -->
+  <div id="works">
+    <div class="row mt centered title">
+      <div class="col-lg-4 col-lg-offset-4">
+        <h3>WORKS</h3>
+        <p>-実績-</p>
       </div>
-      <!-- /row -->
+      <!-- /col-lg-4 -->
+    </div>
+    <!-- /row -->
+    <div class="container">
       <div class="row mt centered">
         <div class="col-lg-4 desc">
           <a class="b-link-fade b-animate-go" href="#" target="_blank">
@@ -285,19 +284,17 @@
       </div>
       <!-- /row -->
     </div>
-    <!-- /container -->
   </div>
-  <!-- /grey -->
+  <!-- /container -->
 
-  <div id="white">
-    <div class="container" id="contactus">
-      <div class="row mt title">
-        <div class="col-lg-4 col-lg-offset-4 centered">
-          <h3>Contact Us</h3>
-          <p>-お問い合わせ-</p>
-          <hr />
-        </div>
+  <div id="contactus">
+    <div class="row mt title">
+      <div class="col-lg-4 col-lg-offset-4 centered">
+        <h3>Contact Us</h3>
+        <p>-お問い合わせ-</p>
       </div>
+    </div>
+    <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST">
@@ -339,28 +336,23 @@
       </div>
     </div>
   </div>
-  <!-- /white -->
 
-  <div id="grey">
-    <div class="container" id="sns">
-      <div class="row mt title">
-        <div class="col-lg-4 col-lg-offset-4 centered">
-          <h3>SNS</h3>
-          <p>-ソーシャルネットワーク-</p>
-          <hr />
-        </div>
+  <div id="sns">
+    <div class="row mt title">
+      <div class="col-lg-4 col-lg-offset-4 centered">
+        <h3>SNS</h3>
+        <p>-ソーシャルネットワーク-</p>
       </div>
-      <div class="text-center">
-        <p class="text-center">お問い合わせは、TwitterまたはInstagramのDMでも大丈夫です。</p>
-        <div class="row mt">
-          <a class="b-link-fade b-animate-go" href="https://twitter.com/mochi_goma_jpg" target="_blank">
-            <i class="fa fa-twitter fa-5x" aria-hidden="true"></i>
-          </a>
-          <a class="b-link-fade b-animate-go" href="https://www.instagram.com/photo_mo_chi/?hl=ja" target="_blank">
-            <i class="fa fa-instagram fa-5x" aria-hidden="true"></i>
-          </a>
-        </div>
-
+    </div>
+    <div class="text-center container">
+      <p>お問い合わせは、TwitterまたはInstagramのDMでも大丈夫です。</p>
+      <div class="row mt">
+        <a class="b-link-fade b-animate-go" href="https://twitter.com/mochi_goma_jpg" target="_blank">
+          <i class="fa fa-twitter fa-5x" aria-hidden="true"></i>
+        </a>
+        <a class="b-link-fade b-animate-go" href="https://www.instagram.com/photo_mo_chi/?hl=ja" target="_blank">
+          <i class="fa fa-instagram fa-5x" aria-hidden="true"></i>
+        </a>
       </div>
     </div>
   </div>
