--- a/index.html
+++ b/index.html
@@ -294,58 +294,8 @@
         <p>-お問い合わせ-</p>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST">
-            <div class="form-group">
-              <input type="name" name="name" class="form-control" id="contact-name" placeholder="お名前"
-                data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-              <div class="validate"></div>
-            </div>
-            <div class="form-group">
-              <input type="email" name="email" class="form-control" id="contact-email" placeholder="メールアドレス"
-                data-rule="email" data-msg="Please enter a valid email" />
-              <div class="validate"></div>
-            </div>
-            <div class="form-group">
-              <input type="text" name="subject" class="form-control" id="contact-subject" placeholder="件名"
-                data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-              <div class="validate"></div>
-            </div>
-
-            <div class="form-group">
-              <textarea class="form-control" name="message" id="contact-message" placeholder="本文" rows="5"
-                data-rule="required" data-msg="Please write something for us"></textarea>
-              <div class="validate"></div>
-            </div>
-
-            <div class="loading"></div>
-            <div class="error-message"></div>
-            <div class="sent-message">
-              送信しました！
-            </div>
-
-            <div class="form-send">
-              <button type="submit" class="btn btn-large">
-                送信
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="sns">
-    <div class="row mt title">
-      <div class="col-lg-4 col-lg-offset-4 centered">
-        <h3>SNS</h3>
-        <p>-ソーシャルネットワーク-</p>
-      </div>
-    </div>
     <div class="text-center container">
-      <p>お問い合わせは、TwitterまたはInstagramのDMでも大丈夫です。</p>
+      <p>TwitterまたはInstagramのDMからお願いします。</p>
       <div class="row mt">
         <a class="b-link-fade b-animate-go" href="https://twitter.com/mochi_goma_jpg" target="_blank">
           <i class="fa fa-twitter fa-5x" aria-hidden="true"></i>
