WORKSリンク入れ忘れ

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <div class="container">
       <div class="row mt centered">
         <div class="col-lg-4 desc">
-          <a class="b-link-fade b-animate-go" href="#" target="_blank">
+          <a class="b-link-fade b-animate-go" href="https://uenojoshi-tour.com/ja/" target="_blank">
             <img width="350" src="img/portfolio/port01.jpg" alt="Web制作" />
             <div class="b-wrapper">
               <h4 class="b-from-left b-animate b-delay03">Web制作</h4>
