--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
   </header>
   <main>
-    
+
   </main>
   <footer>
     <div id="copyrights">
@@ -76,6 +76,7 @@
   <script src="lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="lib/php-mail-form/validate.js"></script>
   <script src="lib/hover-pack/hover-pack.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.js"></script>
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
