画像サイズ調整

--- a/part/works.html
+++ b/part/works.html
@@ -14,7 +14,7 @@
     <div class="mt centered">
         <div class="col-lg-12 desc bottom-work">
             <a class="b-link-fade b-animate-go" href="https://uenojoshi-tour.com/ja/" target="_blank">
-                <img width="350" src="img/portfolio/port01.jpg" alt="Web制作" />
+                <img class="responsive" src="img/portfolio/port01.jpg" alt="Web制作" />
                 <div class="b-wrapper">
                     <h4 class="b-from-left b-animate b-delay03">Web制作</h4>
                     <p class="b-from-right b-animate b-delay03">和旅合同会社 様</p>
@@ -56,7 +56,7 @@
         </div>
         <div class="col-lg-12 desc bottom-work">
             <a class="b-link-fade b-animate-go" href="https://photos.app.goo.gl/K2LLDjXR8mGx1fzBA" target="_blank">
-                <img width="350" src="img/portfolio/port02.jpg" alt="写真撮影" />
+                <img class="responsive" src="img/portfolio/port02.jpg" alt="写真撮影" />
                 <div class="b-wrapper">
                     <h4 class="b-from-left b-animate b-delay03">写真撮影</h4>
                     <p class="b-from-right b-animate b-delay03">和旅合同会社 様</p>
@@ -86,7 +86,7 @@
         </div>
         <div class="col-lg-12 desc bottom-work">
             <a class="b-link-fade b-animate-go" href="https://www.youtube.com/channel/UCQTHgTEZApIsEnPYePATEYg/featured"
-                target="_blank"><img width="350" src="img/portfolio/port03.jpg" alt="動画編集" />
+                target="_blank"><img class="responsive" src="img/portfolio/port03.jpg" alt="動画編集" />
                 <div class="b-wrapper">
                     <h4 class="b-from-left b-animate b-delay03">動画編集</h4>
                     <p class="b-from-right b-animate b-delay03">和旅合同会社 様</p>
