--- a/part/top.html
+++ b/part/top.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="mt">
             <div class="col-lg-6 col-md-6 col-xs-12 desc text-right">
-                <img src="img/me.jpg" alt="me" />
+                <img class="responsive" src="img/me.jpg" alt="me" />
             </div>
             <div class="profile col-lg-6 col-md-6 col-xs-12 desc">
                 <table>
@@ -68,10 +68,10 @@
                     企業のInstagramの運営や、YouTubeの動画編集も担当している。
                 </p>
             </div>
-            <div class="more col-lg-12 col-md-12 col-xs-12 text-center">
-                <button type="button" class="btn" value="about">MORE</button>
-            </div>
         </div>
+    </div>
+    <div class="more col-lg-12 col-md-12 col-xs-12 text-center">
+        <button type="button" class="btn" value="about">MORE</button>
     </div>
 </div>
 
@@ -139,7 +139,7 @@
         <div class="mt centered">
             <div class="col-lg-4 desc">
                 <a class="b-link-fade b-animate-go" href="https://uenojoshi-tour.com/ja/" target="_blank">
-                    <img src="img/portfolio/port01.jpg" alt="Web制作" />
+                    <img class="responsive" src="img/portfolio/port01.jpg" alt="Web制作" />
                     <div class="b-wrapper">
                         <h4 class="b-from-left b-animate b-delay03">Web制作</h4>
                         <p class="b-from-right b-animate b-delay03">和旅合同会社 様</p>
@@ -167,7 +167,7 @@
             </div>
             <div class="col-lg-4 desc">
                 <a class="b-link-fade b-animate-go" href="https://photos.app.goo.gl/K2LLDjXR8mGx1fzBA" target="_blank">
-                    <img src="img/portfolio/port02.jpg" alt="写真撮影" />
+                    <img class="responsive" src="img/portfolio/port02.jpg" alt="写真撮影" />
                     <div class="b-wrapper">
                         <h4 class="b-from-left b-animate b-delay03">写真撮影</h4>
                         <p class="b-from-right b-animate b-delay03">和旅合同会社 様</p>
@@ -197,8 +197,8 @@
             </div>
             <div class="col-lg-4 desc">
                 <a class="b-link-fade b-animate-go"
-                    href="https://www.youtube.com/channel/UCQTHgTEZApIsEnPYePATEYg/featured" target="_blank"><img
-                        src="img/portfolio/port03.jpg" alt="動画編集" />
+                    href="https://www.youtube.com/channel/UCQTHgTEZApIsEnPYePATEYg/featured" target="_blank">
+                    <img class="responsive" src="img/portfolio/port03.jpg" alt="動画編集" />
                     <div class="b-wrapper">
                         <h4 class="b-from-left b-animate b-delay03">動画編集</h4>
                         <p class="b-from-right b-animate b-delay03">和旅合同会社 様</p>
