--- a/part/top.html
+++ b/part/top.html
@@ -28,7 +28,7 @@
                             <th scope="row" class="text-align-center">
                                 <i class="fa fa-user fa-3x" aria-hidden="true"></i>
                             </th>
-                            <td>もちごま</td>
+                            <td>後藤将宏（ごま）</td>
                         </tr>
                         <tr>
                             <th scope="row">
